package application;

import domain.User;

public abstract class AMedia implements IMedia {
    public String title;
    public String category;

    public void saveToWatchedList() {

}
}
