package application;

public interface IMedia {
    public void playMedia(AMedia media);

}
