@startuml

class Main {
+ static void main(String[] args)
}
package application{
interface IMedia {
+ String playMedia()
'+ pauseMedia()
}

abstract AMedia {
- String title
- String category

}

class Movie {

}

class Catelog{
- ArrayList<AMedia> Series
- ArrayList<AMedia> Movie
- FileIO io

+ void addMovieToCatalog()
ArrayList<Movie> showMovieCatalog()
ArrayList<Series> showSerieCatalog()
int getSeries()
int getMovies()
}


class Series {
- int episode
- int season
}
class Episode{

}
}

package domain{
class User {
- String username
- String password
- Search search
- LinkedHashSet<Media> watchedList
- LinkedHashSet<Media> savedList

User(String username, String password)

+ void viewWatchedList()
+ void viewSavedList()
}
}

class Streaming {
- User user
- String name
- TextUI ui
- FileIO io
- Search search
- String moviePath
- String seriePath
- AMedia media
- ArrayList<User> userList
Streaming(String name)
+ void runStreaming()
+ void startStreaming()
+ void createUser(String username, String password)
+ void quitStreaming(input)

+ boolean confirmPassword(String password)
+ login(String username, String password)
+ boolean checkUsernameAvailability(String username)
}


package utilty{
class FileIO {
- ArrayList<Movie> listOfMovies
- ArrayList<Series> listOfSeries
+ ArrayList<String> readMovieData(String moviePath)
+ ArrayList<String> readSerieData(String seriePath)
- ArrayList<String> scanFile(String path)
+ void saveFavorites(ArrayList<User> user, String path)
+ void saveWatched(ArrayList<User> user, String path)
+ void saveUserData()
+ ArrayList<User> readUserData()
}

class Search {
- Scanner scanner
- ArrayList<Movie> movies
- ArrayList<Series> series
+ Amedia media searchByTitle(String title)
+ Amedia media searchByCategory(String category)

}
class TextUI {
- Scanner scanner
+ String promptText(String msg)
+ void displayMessage(String msg)
+ int promptNumeric(String msg)
+ void displayList(ArrayList<String> list, String msg)
+ void promptChoice(ArrayList<String> optionslist, String msg)
}
}


Main *-- Streaming
Streaming *-- Catelog
Streaming *-- User
Streaming *-- Search
Streaming *-- TextUI
Catelog <|-- IMedia
IMedia <|-- AMedia
Streaming *-- FileIO
AMedia <|-- Movie
AMedia  <|-- Series
Series *-- Episode
Movie o-- Episode

'https://devhints.io/plantuml
'Car <|-- SmallCar      # extension
'Car *-- Engine         # composition
'Cars o-- Car           # aggregation
'Car <|.. SmallCar      # dotted line (use .. instead of --)
'Car <|--* Car

'-left->
'-right->

@enduml